[project]
name = "moll-number-registration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pydantic-settings>=2.14.0",
    "pytesseract>=0.3.13",
    "requests>=2.33.1",
    "uvicorn>=0.46.0",
]
